<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NuitInfoMobile</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>


    <string name="news_section">Actualitées</string>
    <string name="places_section">Lieux</string>



    <string name="btnLogout">Logout</string>
    <string name="btnLogin">Login</string>
    <string name="hEmail">Email</string>
    <string name="hPassword">Password</string>


    <!--  Debug   -->
    <string name="mdUserName">Name</string>
    <string name="mdUserFirstName">FirstName</string>

    <string name="debugtxttiny">Lorem Ipsum</string>
    <string name="debugtxtshort">Lorem ipsum dolor sit amet.</string>
    <string name="debugtxtmedium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer suscipit.</string>
    <string name="debugtxtlarge">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin elit mauris, efficitur vitae ligula sed, facilisis efficitur turpis. Morbi libero elit, aliquet nec leo non.</string>
    <string name="debugtxtxlarge">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin convallis urna et dolor volutpat maximus. Suspendisse facilisis diam lobortis tortor pharetra, ut condimentum eros feugiat. Suspendisse mollis iaculis sapien. Sed quis odio in enim lobortis hendrerit. Nunc vel est tempus, cursus purus fringilla, semper felis. Sed facilisis arcu ut ligula.</string>
    <string name="menu">Menu</string>

</resources>
